--- a/jsEvents/iteration1.html
+++ b/jsEvents/iteration1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="iteration1.js" refer></script>
+    <script src="iter1.js" refer></script>
 </head>
 <body>
     <button id="btnToClick"></button>
